--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,4 +1,29 @@
+// $red: #dc3545
+// $grey: #EEEEEE
+$poppins: "Poppins"
+$poppinsBold: "Poppins-Bold"
+
 // BOOTSTRAP
 @import '../../node_modules/bootstrap/scss/bootstrap.scss'
+
+// SECTIONS PAGE
+@import './../sass/imports/_header.sass'
+
+// FONT_FAMILY
+@font-face
+    font-family: "Poppins"
+    src: url("./../../public/fonts/Poppins-Regular.ttf")
+@font-face
+    font-family: "Poppins-Bold"
+    src: url("./../../public/fonts/Poppins-Bold.ttf")
+    
+
+// FONTAWESOME    
+$fa-font-path: "../webfonts"
+@import "../../node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss"
+@import "../../node_modules/@fortawesome/fontawesome-free/scss/solid.scss"
+@import "../../node_modules/@fortawesome/fontawesome-free/scss/brands.scss"
+
+
 
 
