--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,13 +1,17 @@
 // $red: #dc3545
 // $grey: #EEEEEE
-$poppins: "Poppins"
-$poppinsBold: "Poppins-Bold"
+$navfont: "Poppins"
+$titlefont: "Poppins-Bold"
+$mainfont: "SourceSansPro"
+
 
 // BOOTSTRAP
 @import '../../node_modules/bootstrap/scss/bootstrap.scss'
 
 // SECTIONS PAGE
 @import './../sass/imports/_header.sass'
+@import './../sass/imports/_t-shirt-cover.sass'
+
 
 // FONT_FAMILY
 @font-face
@@ -16,6 +20,10 @@ $poppinsBold: "Poppins-Bold"
 @font-face
     font-family: "Poppins-Bold"
     src: url("./../../public/fonts/Poppins-Bold.ttf")
+@font-face
+    font-family: "SourceSansPro"
+    src: url("./../../public/fonts/SourceSansPro-Regular.ttf")
+
     
 
 // FONTAWESOME    
