--- a/src/sass/imports/_header.sass
+++ b/src/sass/imports/_header.sass
@@ -1,6 +1,6 @@
 
     h1
-        font-family: $poppinsBold
+        font-family: $titlefont
         font-size: 28px
         padding-top: 92px
         padding-bottom: 48px
@@ -12,7 +12,7 @@
         
         li a
             font-size: 13px
-            font-family: $poppins
+            font-family: $navfont
             letter-spacing: 0.5px
 
         .btn
