--- a/src/sass/imports/_t-shirt-cover.sass
+++ b/src/sass/imports/_t-shirt-cover.sass
@@ -1,10 +1,11 @@
 .t-shirt
-    background-color: rgb(243, 243, 243)
+    background: rgb(243, 243, 243)
+    background-size: cover
     
     h3
         font-size: 50px
         color: rgb(189, 88, 78)
-        font-family: $mainfont
+        font-family: "Poppins-Light"
         font-weight: 300
         padding-top: 180px
 
