--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -11,6 +11,8 @@ $mainfont: "SourceSansPro"
 // SECTIONS PAGE
 @import './../sass/imports/_header.sass'
 @import './../sass/imports/_t-shirt-cover.sass'
+@import './../sass/imports/_services.sass'
+
 
 
 // FONT_FAMILY
@@ -23,6 +25,10 @@ $mainfont: "SourceSansPro"
 @font-face
     font-family: "SourceSansPro"
     src: url("./../../public/fonts/SourceSansPro-Regular.ttf")
+@font-face
+    font-family: "Poppins-Light"
+    src: url("./../../public/fonts/Poppins-Light.ttf")
+
 
     
 
