--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -12,6 +12,7 @@ $mainfont: "SourceSansPro"
 @import './../sass/imports/_header.sass'
 @import './../sass/imports/_t-shirt-cover.sass'
 @import './../sass/imports/_services.sass'
+@import './../sass/imports/_products.sass'
 
 
 
