--- a/src/sass/imports/_t-shirt-cover.sass
+++ b/src/sass/imports/_t-shirt-cover.sass
@@ -20,7 +20,7 @@
         line-height: 30px
         font-weight: 400
     
-    span
+    .badge-danger
         font-family: $mainfont
         letter-spacing: 1px
         background-color: rgb(189, 88, 78)
