--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -13,6 +13,7 @@ $mainfont: "SourceSansPro"
 @import './../sass/imports/_t-shirt-cover.sass'
 @import './../sass/imports/_services.sass'
 @import './../sass/imports/_products.sass'
+@import './../sass/imports/_discover-products.sass'
 
 
 
