--- a/src/sass/imports/_discover-products.sass
+++ b/src/sass/imports/_discover-products.sass
@@ -1,19 +1,4 @@
-// #discover-products
-//     background: url("./../../../public/images/cta-bg.jpg") no-repeat center center fixed
-//     -webkit-background-size: cover
-//     -moz-background-size: cover
-//     -o-background-size: cover
-//     background-size: cover
-//     height: 596.8px
-//     display: flex
-//     align-items: center
-
-//     h3
-//         font-size: 40px
-//         font-weight: 600
-//         letter-spacing: 0px
-
-#learn
+#discover-products
     
     background: url('../../../public/images/cta-bg.jpg') no-repeat center center fixed
     -webkit-background-size: cover
