--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -14,6 +14,8 @@ $mainfont: "SourceSansPro"
 @import './../sass/imports/_services.sass'
 @import './../sass/imports/_products.sass'
 @import './../sass/imports/_discover-products.sass'
+@import './../sass/imports/_caroussel.sass'
+
 
 
 
