--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9655,95 +9655,94 @@ h3 {
     border-color: #dee2e6;
   }
 }
-h1 {
+#header h1 {
   font-family: "Poppins-Bold";
   font-size: 28px;
   padding-top: 92px;
   padding-bottom: 48px;
   margin: 0;
 }
-
-nav {
+#header nav {
   position: relative;
   text-align: center;
 }
-nav li a {
+#header nav li a {
   font-size: 13px;
   font-family: "Poppins";
   letter-spacing: 0.5px;
 }
-nav .btn {
+#header nav .btn {
   width: 30px !important;
   height: 30px !important;
 }
 
-.t-shirt {
+#t-shirt {
   background: #f3f3f3;
   background-size: cover;
 }
-.t-shirt h3 {
+#t-shirt h3 {
   font-size: 50px;
   color: #bd584e;
   font-family: "Poppins-Light";
   font-weight: 300;
   padding-top: 180px;
 }
-.t-shirt h1 {
+#t-shirt h1 {
   font-size: 100px;
   font-family: "Poppins-Bold";
 }
-.t-shirt p {
+#t-shirt p {
   color: #909090;
   font-family: "SourceSansPro";
   font-size: 20px;
   line-height: 30px;
   font-weight: 400;
 }
-.t-shirt .badge-danger {
+#t-shirt .badge-danger {
   font-family: "SourceSansPro";
   letter-spacing: 1px;
   background-color: #bd584e;
 }
 
-.services .room {
+#services .room {
   background-image: url("./../../../public/images/services/service-1.jpg");
   background-size: cover;
   background-position: center;
 }
-.services .items {
+#services .items {
   background-image: url("./../../../public/images/services/service-2.jpg");
   background-size: cover;
   background-position: center;
 }
-.services .clothes {
+#services .clothes {
   background-image: url("./../../../public/images/services/slider-3.jpg");
   background-size: cover;
   background-position: center;
 }
-.services h1 {
+#services h1 {
   color: white;
   padding-top: 100px;
   padding-bottom: 100px;
 }
 
-.products h2 {
+#products h2 {
   font-size: 23px;
   font-family: "Poppins-Bold";
 }
-.products h3 {
+#products h3 {
   font-size: 17px;
   font-family: "Poppins-Bold";
 }
-.products span {
+#products span {
   color: #bd584e;
   font-family: "Poppins-Bold";
   font-size: 15px;
 }
-.products .pr-2 {
+#products .pr-2 {
   text-decoration: line-through;
   color: #CACACA;
 }
-.products .onsale {
+#products .onsale {
   border-radius: 100%;
   color: white;
   background-color: #bd584e;
@@ -9760,7 +9759,7 @@ nav .btn {
   text-align: -webkit-center;
 }
 
-#learn {
+#discover-products {
   background: url("../../../public/images/cta-bg.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -9781,6 +9780,61 @@ nav .btn {
   background-color: #bd584e;
   font-size: 13px;
   letter-spacing: 0.8px;
+}
+
+#caroussel {
+  /* Couleurs des indicateurs */
+}
+#caroussel h2 {
+  font-size: 23px;
+  font-family: "Poppins-Bold";
+}
+#caroussel .blog .carousel-indicators {
+  left: 0;
+  top: auto;
+  bottom: -40px;
+}
+#caroussel .blog .carousel-indicators li {
+  background: white;
+  border-radius: 50%;
+  width: 12px;
+  height: 12px;
+  border-top: 10px solid transparent;
+  border-bottom: 0;
+  margin-left: 7px;
+  border: 1px solid #8a8a8a;
+}
+#caroussel .blog .carousel-indicators .active {
+  background: #8a8a8a;
+}
+#caroussel h3 {
+  font-size: 17px;
+  font-family: "Poppins-Bold";
+}
+#caroussel span {
+  color: #bd584e;
+  font-family: "Poppins-Bold";
+  font-size: 15px;
+}
+#caroussel .pr-2 {
+  text-decoration: line-through;
+  color: #CACACA;
+}
+#caroussel .onsale {
+  border-radius: 100%;
+  color: white;
+  background-color: #bd584e;
+  position: static;
+  display: inline-block;
+  vertical-align: middle;
+  margin-right: 20px;
+  width: 48px;
+  height: 48px;
+  font-size: 13px;
+  font-weight: 600;
+  line-height: 48px;
+  font-family: "Poppins", sans-serif;
+  text-align: -webkit-center;
 }
 
 @font-face {
