--- a/src/sass/imports/_caroussel.sass
+++ b/src/sass/imports/_caroussel.sass
@@ -1,8 +1,30 @@
-#products
+#caroussel
 
     h2
         font-size: 23px
         font-family: $titlefont
+
+    .blog .carousel-indicators
+        left: 0
+        top: auto
+        bottom: -40px
+
+
+
+    /* Couleurs des indicateurs */
+    .blog .carousel-indicators li 
+        background: white
+        border-radius: 50%
+        width: 12px
+        height: 12px
+        border-top: 10px solid transparent
+        border-bottom: 0
+        margin-left: 7px
+        border: 1px solid #8a8a8a
+        
+    
+    .blog .carousel-indicators .active 
+        background: #8a8a8a
 
     h3
         font-size: 17px
