--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -15,6 +15,7 @@ $mainfont: "SourceSansPro"
 @import './../sass/imports/_products.sass'
 @import './../sass/imports/_discover-products.sass'
 @import './../sass/imports/_caroussel.sass'
+@import './../sass/imports/_cards.sass'
 
 
 
@@ -32,6 +33,9 @@ $mainfont: "SourceSansPro"
 @font-face
     font-family: "Poppins-Light"
     src: url("./../../public/fonts/Poppins-Light.ttf")
+@font-face
+    font-family: "SourceSansPro-Light"
+    src: url("./../../public/fonts/SourceSansPro-Light.ttf")
 
 
     
@@ -41,6 +45,7 @@ $fa-font-path: "../webfonts"
 @import "../../node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss"
 @import "../../node_modules/@fortawesome/fontawesome-free/scss/solid.scss"
 @import "../../node_modules/@fortawesome/fontawesome-free/scss/brands.scss"
+@import "../../node_modules/@fortawesome/fontawesome-free/scss/_icons.scss"
 
 
 
