section footer & copyright

--- a/src/sass/imports/_cards.sass
+++ b/src/sass/imports/_cards.sass
@@ -15,7 +15,16 @@
             line-height: 1.7
             font-size: 17px
 
+        span
+            font-family: $mainfont
+
     .red
         background-color: #BB5951 !important
+
+        a :hover
+            background-color: #eaeaea
+
+        span
+            font-family: $mainfont
 
        
