--- a/src/sass/imports/_header.sass
+++ b/src/sass/imports/_header.sass
@@ -15,6 +15,13 @@
             font-family: $navfont
             letter-spacing: 0.5px
 
-        .btn
-            width: 30px !important
-            height: 30px !important
+        .boutons
+
+            ul
+                list-style: none
+
+                button:focus
+                    outline: 0
+
+                .connection
+                    font-family: $mainfont
