--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -16,6 +16,8 @@ $mainfont: "SourceSansPro"
 @import './../sass/imports/_discover-products.sass'
 @import './../sass/imports/_caroussel.sass'
 @import './../sass/imports/_cards.sass'
+@import './../sass/imports/_footer.sass'
+@import './../sass/imports/_copyright.sass'
 
 
 
@@ -37,8 +39,6 @@ $mainfont: "SourceSansPro"
     font-family: "SourceSansPro-Light"
     src: url("./../../public/fonts/SourceSansPro-Light.ttf")
 
-
-    
 
 // FONTAWESOME    
 $fa-font-path: "../webfonts"
