--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9671,58 +9671,84 @@ h3 {
   font-family: "Poppins";
   letter-spacing: 0.5px;
 }
-#header nav .btn {
-  width: 30px !important;
-  height: 30px !important;
+#header nav .boutons ul {
+  list-style: none;
+}
+#header nav .boutons ul button:focus {
+  outline: 0;
+}
+#header nav .boutons ul .connection {
+  font-family: "SourceSansPro";
 }
 
 #t-shirt {
   background: #f3f3f3;
   background-size: cover;
 }
-#t-shirt h3 {
+#t-shirt .row {
+  align-items: center;
+}
+#t-shirt .row h3 {
   font-size: 50px;
   color: #bd584e;
   font-family: "Poppins-Light";
   font-weight: 300;
-  padding-top: 180px;
 }
-#t-shirt h1 {
+#t-shirt .row h1 {
   font-size: 100px;
   font-family: "Poppins-Bold";
 }
-#t-shirt p {
+#t-shirt .row p {
   color: #909090;
   font-family: "SourceSansPro";
   font-size: 20px;
   line-height: 30px;
   font-weight: 400;
 }
-#t-shirt .badge-danger {
+#t-shirt .row .badge-danger {
   font-family: "SourceSansPro";
   letter-spacing: 1px;
   background-color: #bd584e;
+}
+@media only screen and (max-width: 768px) {
+  #t-shirt h1 {
+    font-size: 50px;
+  }
+  #t-shirt h3 {
+    font-size: 25px;
+  }
 }
 
 #services .room {
   background-image: url("./../../../public/images/services/service-1.jpg");
   background-size: cover;
   background-position: center;
+  height: 256px;
+}
+#services .room hr {
+  width: 170px;
 }
 #services .items {
   background-image: url("./../../../public/images/services/service-2.jpg");
   background-size: cover;
   background-position: center;
+  height: 256px;
+}
+#services .items hr {
+  width: 143px;
 }
 #services .clothes {
   background-image: url("./../../../public/images/services/slider-3.jpg");
   background-size: cover;
   background-position: center;
+  height: 256px;
+}
+#services .clothes hr {
+  width: 110px;
 }
 #services h1 {
   color: white;
-  padding-top: 100px;
-  padding-bottom: 100px;
+  font-size: 29px;
 }
 
 #products h2 {
@@ -9852,8 +9878,79 @@ h3 {
   line-height: 1.7;
   font-size: 17px;
 }
+#cards .card span {
+  font-family: "SourceSansPro";
+}
 #cards .red {
   background-color: #BB5951 !important;
+}
+#cards .red a :hover {
+  background-color: #eaeaea;
+}
+#cards .red span {
+  font-family: "SourceSansPro";
+}
+
+#footer {
+  background: #212121;
+  background-size: cover;
+}
+#footer span {
+  color: white;
+  font-family: "Poppins-Bold";
+  font-size: 13px;
+  letter-spacing: 1.5px;
+}
+#footer p {
+  color: #9B9B9B;
+  font-size: 15px;
+  font-family: "SourceSansPro";
+  line-height: 1.7 !important;
+}
+#footer ul li {
+  list-style: none;
+  border-bottom: 1px solid #353535;
+}
+#footer ul li a {
+  color: #9B9B9B;
+  font-family: "SourceSansPro";
+  font-size: 14px;
+}
+#footer ul li i {
+  color: #9B9B9B;
+}
+#footer ul li a:hover {
+  text-decoration: none;
+  color: white;
+}
+#footer .tag a {
+  font-size: 11px !important;
+  float: left;
+  padding: 7px 16px 8px;
+  border: 1px solid #353535;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  font-family: "SourceSansPro";
+  color: #9B9B9B;
+}
+#footer .tag a:hover {
+  text-decoration: none;
+  color: white;
+}
+
+.border-left {
+  border-left: 1px solid #353535 !important;
+}
+
+#copyright {
+  background: #0A0A0A;
+  background-size: cover;
+}
+#copyright p {
+  font-family: "SourceSansPro" !important;
+  color: #838383;
+  letter-spacing: 2px;
+  font-size: 14px;
 }
 
 @font-face {
