--- a/src/sass/imports/_services.sass
+++ b/src/sass/imports/_services.sass
@@ -4,19 +4,29 @@
         background-image: url("./../../../public/images/services/service-1.jpg")
         background-size: cover
         background-position: center
+        height: 256px
+
+        hr
+            width: 170px
         
     .items
         background-image: url("./../../../public/images/services/service-2.jpg")
         background-size: cover
         background-position: center
+        height: 256px
+        
+        hr
+            width: 143px
 
     .clothes
         background-image: url("./../../../public/images/services/slider-3.jpg")
         background-size: cover
         background-position: center
+        height: 256px
+        
+        hr
+            width: 110px
 
     h1
         color: white
-        padding-top: 100px
-        padding-bottom: 100px
-
+        font-size: 29px
