js : modal, navbar, button color navbar + transition products

--- a/src/sass/imports/_caroussel.sass
+++ b/src/sass/imports/_caroussel.sass
@@ -55,3 +55,61 @@
         font-family: $navfont, sans-serif
         text-align: -webkit-center
         
+    // TRANSITION PRODUCTS
+    .my-card
+        
+
+        img
+            overflow: hidden
+        
+        .justify-content-center
+            z-index: 2
+            background-color: #fff
+            position: relative
+
+            a
+                text-decoration: none
+                color: black
+
+        .text-center
+            z-index: 2
+            background-color: #fff
+            position: relative
+
+            a
+                text-decoration: none
+                color: black
+        
+        .my-body-card
+            left: 0
+            right: 0
+            bottom: 44px
+            transition: 0.2s
+            z-index: 1
+            position: absolute
+            text-align: center
+
+            a
+                text-decoration-line: none
+
+                i
+                    text-decoration: none
+
+                .more
+                    font-family: "SourceSansPro-Light" !important
+                    font-size: 15px !important
+                    color: white
+                    
+                .more:hover
+                    text-decoration-line: none !important
+
+        .bg-primary
+            background-color: rgba(0, 0, 0, 0.9) !important
+
+        .bg-info
+            background-color: rgba(189, 88, 78, 0.9)!important
+
+            
+
+    .my-card:hover .my-body-card
+        bottom: 100px
