--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9662,23 +9662,93 @@ h3 {
   padding-bottom: 48px;
   margin: 0;
 }
-#header nav {
-  position: relative;
+@media only screen and (max-width: 992px) {
+  #header h1 {
+    display: none;
+  }
+}
+
+#navbar nav {
   text-align: center;
 }
-#header nav li a {
+#navbar nav h3 {
+  font-family: "Poppins-Bold";
+  font-size: 20px;
+  display: none;
+}
+@media only screen and (max-width: 992px) {
+  #navbar nav h3 {
+    display: inline;
+  }
+}
+#navbar nav h2 {
+  font-family: "Poppins-Bold";
+  font-size: 20px;
+  display: none;
+}
+@media only screen and (max-width: 992px) {
+  #navbar nav h2 {
+    padding-top: 16px;
+    padding-bottom: 16px;
+    display: inline;
+  }
+}
+#navbar nav li a {
   font-size: 13px;
   font-family: "Poppins";
   letter-spacing: 0.5px;
 }
-#header nav .boutons ul {
+#navbar nav .boutons ul {
   list-style: none;
 }
-#header nav .boutons ul button:focus {
+#navbar nav .boutons ul button:focus {
   outline: 0;
 }
-#header nav .boutons ul .connection {
+#navbar nav .boutons ul #connection {
   font-family: "SourceSansPro";
+  background-color: #bd584e;
+  border: 1px solid #bd584e;
+}
+#navbar nav .boutons ul #connection:hover {
+  background-color: #a04640;
+  border: 1px solid #a04640;
+}
+@media only screen and (max-width: 992px) {
+  #navbar nav .boutons {
+    padding-top: 10px;
+  }
+}
+#navbar .navbar-toggler-icon {
+  background-image: none;
+}
+
+@media only screen and (max-width: 992px) {
+  .navbar-expand-lg {
+    justify-content: space-between;
+  }
+}
+.black {
+  background-color: #23272A;
+  color: white;
+}
+
+.burger-white {
+  border-color: white !important;
+  color: white !important;
+}
+
+.whiteLetters {
+  color: white !important;
+}
+
+.white {
+  background-color: white;
+}
+
+.fixed-top {
+  transition: 1s;
+  top: 0;
+  z-index: 5;
 }
 
 #t-shirt {
@@ -9710,11 +9780,14 @@ h3 {
   letter-spacing: 1px;
   background-color: #bd584e;
 }
+#t-shirt .row .badge-danger:hover {
+  background-color: #a04640;
+}
 @media only screen and (max-width: 768px) {
-  #t-shirt h1 {
+  #t-shirt .row h1 {
     font-size: 50px;
   }
-  #t-shirt h3 {
+  #t-shirt .row h3 {
     font-size: 25px;
   }
 }
@@ -9784,6 +9857,59 @@ h3 {
   font-family: "Poppins", sans-serif;
   text-align: -webkit-center;
 }
+#products .my-card img {
+  overflow: hidden;
+}
+#products .my-card .justify-content-center {
+  z-index: 2;
+  background-color: #fff;
+  position: relative;
+}
+#products .my-card .justify-content-center a {
+  text-decoration: none;
+  color: black;
+}
+#products .my-card .text-center {
+  z-index: 2;
+  background-color: #fff;
+  position: relative;
+}
+#products .my-card .text-center a {
+  text-decoration: none;
+  color: black;
+}
+#products .my-card .my-body-card {
+  left: 0;
+  right: 0;
+  bottom: 92px;
+  transition: 0.2s;
+  z-index: 1;
+  position: absolute;
+  text-align: center;
+}
+#products .my-card .my-body-card a {
+  text-decoration-line: none;
+}
+#products .my-card .my-body-card a i {
+  text-decoration: none;
+}
+#products .my-card .my-body-card a .more {
+  font-family: "SourceSansPro-Light" !important;
+  font-size: 15px !important;
+  color: white;
+}
+#products .my-card .my-body-card a .more:hover {
+  text-decoration-line: none !important;
+}
+#products .my-card .bg-primary {
+  background-color: rgba(0, 0, 0, 0.9) !important;
+}
+#products .my-card .bg-info {
+  background-color: rgba(189, 88, 78, 0.9) !important;
+}
+#products .my-card:hover .my-body-card {
+  bottom: 148px;
+}
 
 #discover-products {
   background: url("../../../public/images/cta-bg.jpg") no-repeat center center fixed;
@@ -9806,6 +9932,9 @@ h3 {
   background-color: #bd584e;
   font-size: 13px;
   letter-spacing: 0.8px;
+}
+.container .badge-danger:hover {
+  background-color: #a04640;
 }
 
 #caroussel {
@@ -9861,6 +9990,59 @@ h3 {
   line-height: 48px;
   font-family: "Poppins", sans-serif;
   text-align: -webkit-center;
+}
+#caroussel .my-card img {
+  overflow: hidden;
+}
+#caroussel .my-card .justify-content-center {
+  z-index: 2;
+  background-color: #fff;
+  position: relative;
+}
+#caroussel .my-card .justify-content-center a {
+  text-decoration: none;
+  color: black;
+}
+#caroussel .my-card .text-center {
+  z-index: 2;
+  background-color: #fff;
+  position: relative;
+}
+#caroussel .my-card .text-center a {
+  text-decoration: none;
+  color: black;
+}
+#caroussel .my-card .my-body-card {
+  left: 0;
+  right: 0;
+  bottom: 44px;
+  transition: 0.2s;
+  z-index: 1;
+  position: absolute;
+  text-align: center;
+}
+#caroussel .my-card .my-body-card a {
+  text-decoration-line: none;
+}
+#caroussel .my-card .my-body-card a i {
+  text-decoration: none;
+}
+#caroussel .my-card .my-body-card a .more {
+  font-family: "SourceSansPro-Light" !important;
+  font-size: 15px !important;
+  color: white;
+}
+#caroussel .my-card .my-body-card a .more:hover {
+  text-decoration-line: none !important;
+}
+#caroussel .my-card .bg-primary {
+  background-color: rgba(0, 0, 0, 0.9) !important;
+}
+#caroussel .my-card .bg-info {
+  background-color: rgba(189, 88, 78, 0.9) !important;
+}
+#caroussel .my-card:hover .my-body-card {
+  bottom: 100px;
 }
 
 #cards .card {
@@ -9951,6 +10133,57 @@ h3 {
   color: #838383;
   letter-spacing: 2px;
   font-size: 14px;
+}
+
+/* The Modal (background) */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: black;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 5% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  display: block;
+  /* The Close Button */
+}
+.modal-content .close {
+  color: #aaa;
+  display: flex;
+  justify-content: flex-end;
+}
+.modal-content .close i:hover,
+.modal-content .close i:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+.modal-content .sign .btn {
+  background-color: #9B9B9B;
+  border: #9B9B9B;
+}
+.modal-content .btn {
+  background-color: #bd584e;
+  border: 1px solid #bd584e;
+}
+.modal-content .btn .btn:hover {
+  background-color: #a04640;
+  border: 1px solid #a04640;
+}
+.modal-content #signUp {
+  display: none;
 }
 
 @font-face {
