--- a/src/sass/imports/_discover-products.sass
+++ b/src/sass/imports/_discover-products.sass
@@ -22,3 +22,6 @@
         background-color: rgb(189, 88, 78)
         font-size: 13px
         letter-spacing: 0.8px
+
+    .badge-danger:hover
+            background-color: rgb(160, 70, 64)
