--- a/src/sass/imports/_header.sass
+++ b/src/sass/imports/_header.sass
@@ -6,9 +6,37 @@
         padding-bottom: 48px
         margin: 0
 
+    // MEDIA QUERIES
+    @media only screen and (max-width: 992px)
+        h1
+            display: none
+
+#navbar
     nav
-        position: relative
         text-align: center
+    
+        h3
+            font-family: $titlefont
+            font-size: 20px
+            display: none
+
+        // MEDIA QUERIES
+        @media only screen and (max-width: 992px)
+            h3
+                display: inline
+        
+
+        h2
+            font-family: $titlefont
+            font-size: 20px
+            display: none
+            
+        // MEDIA QUERIES
+        @media only screen and (max-width: 992px)
+            h2
+                padding-top: 16px
+                padding-bottom: 16px
+                display: inline
         
         li a
             font-size: 13px
@@ -23,5 +51,47 @@
                 button:focus
                     outline: 0
 
-                .connection
+                #connection
                     font-family: $mainfont
+                    background-color: rgb(189, 88, 78)
+                    border: 1px solid rgb(189, 88, 78)
+
+                #connection:hover
+                    background-color: rgb(160, 70, 64)
+                    border: 1px solid rgb(160, 70, 64)
+
+        // MEDIA QUERIES
+        @media only screen and (max-width: 992px)
+            .boutons
+                padding-top: 10px 
+
+    .navbar-toggler-icon
+        background-image: none
+
+// MEDIA QUERIES
+@media only screen and (max-width: 992px)
+    .navbar-expand-lg
+        justify-content: space-between
+
+// STYLE boutons noir-blanc JS
+.black
+    background-color: #23272A
+    color: white
+
+.burger-white
+    border-color: white !important
+    color: white !important
+
+.whiteLetters
+    color: white !important
+
+.white
+    background-color: white
+
+// STYLE scroll navbar
+.fixed-top
+    transition: 1s
+    top: 0
+    z-index: 5
+
+
