--- a/src/sass/imports/_t-shirt-cover.sass
+++ b/src/sass/imports/_t-shirt-cover.sass
@@ -28,11 +28,13 @@
             letter-spacing: 1px
             background-color: rgb(189, 88, 78)
 
-    // MEDIA QUERIES
-    @media only screen and (max-width: 768px)
-        h1
-            font-size: 50px
+        .badge-danger:hover
+            background-color: rgb(160, 70, 64)
 
-        h3
-            font-size: 25px
-    
+        // MEDIA QUERIES
+        @media only screen and (max-width: 768px)
+            h1
+                font-size: 50px
+
+            h3
+                font-size: 25px
