--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,5 +1,3 @@
-// $red: #dc3545
-// $grey: #EEEEEE
 $navfont: "Poppins"
 $titlefont: "Poppins-Bold"
 $mainfont: "SourceSansPro"
@@ -8,6 +6,7 @@ $mainfont: "SourceSansPro"
 // BOOTSTRAP
 @import '../../node_modules/bootstrap/scss/bootstrap.scss'
 
+    
 // SECTIONS PAGE
 @import './../sass/imports/_header.sass'
 @import './../sass/imports/_t-shirt-cover.sass'
@@ -18,8 +17,7 @@ $mainfont: "SourceSansPro"
 @import './../sass/imports/_cards.sass'
 @import './../sass/imports/_footer.sass'
 @import './../sass/imports/_copyright.sass'
-
-
+@import './../sass/imports/_modal.sass'
 
 
 // FONT_FAMILY
