--- a/src/sass/imports/_t-shirt-cover.sass
+++ b/src/sass/imports/_t-shirt-cover.sass
@@ -38,3 +38,12 @@
 
             h3
                 font-size: 25px
+
+    // MEDIA QUERIES
+    @media only screen and (max-width: 575px)
+        .shop
+            padding-left: 15px !important
+            padding-right: 15px !important
+    @media only screen and (max-width: 768px)
+        h3
+            font-size: 40px !important
