--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9670,16 +9670,7 @@ h3 {
 
 #navbar nav {
   text-align: center;
-}
-#navbar nav h3 {
-  font-family: "Poppins-Bold";
-  font-size: 20px;
-  display: none;
-}
-@media only screen and (max-width: 992px) {
-  #navbar nav h3 {
-    display: inline;
-  }
+  justify-content: flex-end;
 }
 #navbar nav h2 {
   font-family: "Poppins-Bold";
@@ -9688,9 +9679,7 @@ h3 {
 }
 @media only screen and (max-width: 992px) {
   #navbar nav h2 {
-    padding-top: 16px;
-    padding-bottom: 16px;
-    display: inline;
+    display: inline !important;
   }
 }
 #navbar nav li a {
@@ -9721,12 +9710,12 @@ h3 {
 #navbar .navbar-toggler-icon {
   background-image: none;
 }
-
 @media only screen and (max-width: 992px) {
-  .navbar-expand-lg {
-    justify-content: space-between;
+  #navbar .collapse .col-lg-8 {
+    padding-top: 10px;
   }
 }
+
 .black {
   background-color: #23272A;
   color: white;
@@ -9789,6 +9778,17 @@ h3 {
   }
   #t-shirt .row h3 {
     font-size: 25px;
+  }
+}
+@media only screen and (max-width: 575px) {
+  #t-shirt .shop {
+    padding-left: 15px !important;
+    padding-right: 15px !important;
+  }
+}
+@media only screen and (max-width: 768px) {
+  #t-shirt h3 {
+    font-size: 40px !important;
   }
 }
 
@@ -9857,8 +9857,13 @@ h3 {
   font-family: "Poppins", sans-serif;
   text-align: -webkit-center;
 }
-#products .my-card img {
+#products .my-card .image {
   overflow: hidden;
+}
+#products .my-card .image img {
+  overflow: hidden;
+  transition: 0.2s;
+  max-width: 100%;
 }
 #products .my-card .justify-content-center {
   z-index: 2;
@@ -9909,6 +9914,9 @@ h3 {
 }
 #products .my-card:hover .my-body-card {
   bottom: 148px;
+}
+#products .my-card:hover img {
+  transform: scale(1.1);
 }
 
 #discover-products {
@@ -9991,8 +9999,13 @@ h3 {
   font-family: "Poppins", sans-serif;
   text-align: -webkit-center;
 }
-#caroussel .my-card img {
+#caroussel .my-card .image {
   overflow: hidden;
+}
+#caroussel .my-card .image img {
+  overflow: hidden;
+  transition: 0.2s;
+  max-width: 100%;
 }
 #caroussel .my-card .justify-content-center {
   z-index: 2;
@@ -10015,7 +10028,7 @@ h3 {
 #caroussel .my-card .my-body-card {
   left: 0;
   right: 0;
-  bottom: 44px;
+  bottom: 20px;
   transition: 0.2s;
   z-index: 1;
   position: absolute;
@@ -10043,6 +10056,9 @@ h3 {
 }
 #caroussel .my-card:hover .my-body-card {
   bottom: 100px;
+}
+#caroussel .my-card:hover img {
+  transform: scale(1.1);
 }
 
 #cards .card {
