--- a/src/sass/imports/_caroussel.sass
+++ b/src/sass/imports/_caroussel.sass
@@ -58,9 +58,13 @@
     // TRANSITION PRODUCTS
     .my-card
         
-
-        img
+        .image
             overflow: hidden
+
+            img
+                overflow: hidden
+                transition: 0.2s
+                max-width: 100%
         
         .justify-content-center
             z-index: 2
@@ -83,7 +87,7 @@
         .my-body-card
             left: 0
             right: 0
-            bottom: 44px
+            bottom: 20px
             transition: 0.2s
             z-index: 1
             position: absolute
@@ -102,6 +106,7 @@
                     
                 .more:hover
                     text-decoration-line: none !important
+            
 
         .bg-primary
             background-color: rgba(0, 0, 0, 0.9) !important
@@ -113,3 +118,8 @@
 
     .my-card:hover .my-body-card
         bottom: 100px
+
+    .my-card:hover img
+        transform: scale(1.1)
+
+            
