--- a/src/sass/imports/_header.sass
+++ b/src/sass/imports/_header.sass
@@ -14,17 +14,8 @@
 #navbar
     nav
         text-align: center
+        justify-content: flex-end
     
-        h3
-            font-family: $titlefont
-            font-size: 20px
-            display: none
-
-        // MEDIA QUERIES
-        @media only screen and (max-width: 992px)
-            h3
-                display: inline
-        
 
         h2
             font-family: $titlefont
@@ -34,9 +25,8 @@
         // MEDIA QUERIES
         @media only screen and (max-width: 992px)
             h2
-                padding-top: 16px
-                padding-bottom: 16px
-                display: inline
+                display: inline !important
+                
         
         li a
             font-size: 13px
@@ -68,10 +58,11 @@
     .navbar-toggler-icon
         background-image: none
 
-// MEDIA QUERIES
-@media only screen and (max-width: 992px)
-    .navbar-expand-lg
-        justify-content: space-between
+    // MEDIA QUERIES
+    @media only screen and (max-width: 992px)
+        .collapse .col-lg-8
+            padding-top: 10px
+
 
 // STYLE boutons noir-blanc JS
 .black
