--- a/src/sass/imports/_caroussel.sass
+++ b/src/sass/imports/_caroussel.sass
@@ -10,6 +10,8 @@
         bottom: -40px
 
 
+    .blog .carousel-indicators
+        z-index: 3
 
     /* Couleurs des indicateurs */
     .blog .carousel-indicators li 
